maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: value setIndication is not a member of Unit
possible cause: maybe a semicolon is missing before `value setIndication'?
    }setIndication(xBiscuit,yBiscuit,0)
     ^JediEscaper:39: error: not found: value remplissage
  remplissage(xBiscuit,yBiscuit,0) 
  ^