maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def remplissageCase(x:Int,y:Int,i:Int){
  
  if (!aMurNord(x,y+1) && getIndication(x,y+1)>i+1){
    setIndication(x,y+1,i+1)
    remplissageCase(x,y+1,i+1)
    
  }
  if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){
    setIndication(x,y-1,i+1)
    remplissageCase(x,y-1,i+1)
  }
  if (!aMurOuest(x,y) && getIndication(x-1,y)>i+1){
    setIndication(x-1,y,i+1)
    remplissageCase(x-1,y+1,i+1)
  }
  if (!aMurOuest(x+1,y) && getIndication(x-1,y)>i+1){
    setIndication(x+1,y,i+1)
    remplissageCase(x+1,y,i+1)
  }
}


override def run() {
    // Your code here
  var abs:Int=getMondeLargeur()-1
  var ord:Int=getMondeHauteur()-1
  var xBiscuit:Int=0
  var yBiscuit:Int=0
  while (!aBiscuit(xBiscuit,yBiscuit)){
    for (compt<-0 to abs){
      for (compt<-0 to ord){
        yBiscuit=yBiscuit+1
      }
      xBiscuit=xBiscuit+1
      yBiscuit=0
      }
    }setIndication(xBiscuit,yBiscuit,0)
  remplissage(xBiscuit,yBiscuit,0) 
  
}